// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  Array [
    "50000番ポートで開始します。",
  ],
]
`;

exports[`mock-mokk get 1`] = `
"<!DOCTYPE html>
<html lang=\\"ja\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <title>テスト</title>
</head>
<body>
  <h1>テスト</h1>
</body>
</html>"
`;

exports[`mock-mokk get: toConsoleOutputMatchingSnapshot:error 1`] = `Array []`;

exports[`mock-mokk get: toConsoleOutputMatchingSnapshot:log 1`] = `Array []`;

exports[`mock-mokk not found 1`] = `"Request failed with status code 404"`;

exports[`mock-mokk not found: toConsoleOutputMatchingSnapshot:error 1`] = `
Array [
  Array [
    "ファイルが見つかりません。: /notexist.txt",
  ],
]
`;

exports[`mock-mokk not found: toConsoleOutputMatchingSnapshot:log 1`] = `Array []`;

exports[`mock-mokk port used 1`] = `"listen EADDRINUSE: address already in use :::50000"`;
